--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>PrjInt-GustavoContreras-BrendaCarbajal</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>PrjInt-GustavoContreras-BrendaCarbajal</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Entrenga Trabajo Intengrador Gustavo Contreras - Brenda Carbajal</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -40,10 +40,38 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
+
+
+
+
 	</dependencies>
 
 	<build>
