feat: Vista Proyecto Integrador

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,17 @@ server.port=8081
 
 spring.h2.console.enabled=true
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:basededatosh2
+#spring.datasource.url=jdbc:h2:mem:basededatosh2
+spring.datasource.url=jdbc:h2:file:./basededatosh2
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.path=/h2-console
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.enabled=true
+
+server.error.whitelabel.enabled=false
