feat: Vista integracion proyecto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,16 +4,23 @@ server.port=8081
 spring.h2.console.enabled=true
 spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.url=jdbc:h2:mem:basededatosh2
-spring.datasource.url=jdbc:h2:file:./basededatosh2
+spring.datasource.url=jdbc:h2:file:./basededatosproh2;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=sa
-spring.jpa.show-sql=true
 spring.h2.console.path=/h2-console
 #spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+
 
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.enabled=true
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML
+
+
+logging.level.org.springframework.web=DEBUG
+
 
 server.error.whitelabel.enabled=false
